--- a/index.html
+++ b/index.html
@@ -152,36 +152,40 @@
       max-width: 700px;
     }
 
-    /* --- HOVER SPÉCIAL PREMIÈRE SECTION (#apropos) --- */
+    /* --- MÉTHODE : ÉTAPES NUMÉROTÉES --- */
 
-    #apropos {
-      transition: background-color 0.4s ease, transform 0.4s ease;
+    .step-list {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      max-width: 700px;
     }
 
-    #apropos:hover {
-      background-color: #0a0a0a; /* un peu plus clair */
-      transform: scale(1.01);   /* très léger zoom */
+    .step-item {
+      display: flex;
+      align-items: flex-start;
+      gap: 0.9rem;
     }
 
-    /* Trait animé sous le titre de la section À propos */
-    #apropos .section-title {
-      position: relative;
-      display: inline-block;
+    .step-number {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      border: 1px solid rgba(247, 232, 203, 0.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.8rem;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      margin-top: 0.2rem;
+      flex-shrink: 0;
     }
 
-    #apropos .section-title::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: -6px;
-      height: 2px;
-      width: 0%;
-      background: var(--text-beige);
-      transition: width 0.4s ease;
-    }
-
-    #apropos:hover .section-title::after {
-      width: 100%;
+    .step-body {
+      font-size: 0.95rem;
+      line-height: 1.7;
+      color: rgba(247, 232, 203, 0.9);
     }
 
     /* --- DEVIS / FORM --- */
@@ -264,6 +268,58 @@
       color: rgba(247, 232, 203, 0.6);
       border-top: 1px solid rgba(247, 232, 203, 0.12);
       background: #050505;
+    }
+
+    /* --- BOUTON RETOUR HAUT --- */
+
+    .scroll-top {
+      position: fixed;
+      right: 1.5rem;
+      bottom: 1.6rem;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      border: 1px solid rgba(247, 232, 203, 0.4);
+      background: rgba(5, 5, 5, 0.92);
+      color: var(--text-beige);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      opacity: 0;
+      pointer-events: none;
+      transform: translateY(8px);
+      transition: opacity var(--transition-fast), transform var(--transition-fast),
+                  background-color var(--transition-fast), box-shadow var(--transition-fast);
+      font-size: 1.2rem;
+    }
+
+    .scroll-top.is-visible {
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateY(0);
+      animation: scrollTopPulse 1.6s infinite;
+    }
+
+    .scroll-top:hover {
+      background: var(--text-beige);
+      color: var(--bg-dark);
+      box-shadow: 0 0 0 4px rgba(247, 232, 203, 0.25);
+    }
+
+    @keyframes scrollTopPulse {
+      0% {
+        box-shadow: 0 0 0 0 rgba(247, 232, 203, 0.55);
+        transform: translateY(0) scale(1);
+      }
+      60% {
+        box-shadow: 0 0 0 14px rgba(247, 232, 203, 0);
+        transform: translateY(-3px) scale(1.06);
+      }
+      100% {
+        box-shadow: 0 0 0 0 rgba(247, 232, 203, 0);
+        transform: translateY(0) scale(1);
+      }
     }
 
     /* --- RESPONSIVE --- */
@@ -384,12 +440,36 @@
         <p class="section-subtitle">
           Une façon de travailler simple, structurée et rassurante pour vous.
         </p>
-        <p class="section-content">
-          1. <strong>Échange</strong> — Vous nous expliquez votre activité, vos objectifs et vos inspirations (sites que vous aimez, ambiance, couleurs).<br><br>
-          2. <strong>Proposition</strong> — Nous vous proposons une structure de pages et une idée de design global.<br><br>
-          3. <strong>Maquette & développement</strong> — Nous construisons votre site, section par section, en vous montrant l’avancement.<br><br>
-          4. <strong>Tests & mise en ligne</strong> — Nous vérifions l’affichage sur mobile, tablette et ordinateur, puis nous mettons votre site en ligne.
-        </p>
+        <div class="step-list">
+          <div class="step-item">
+            <div class="step-number">1</div>
+            <p class="step-body">
+              <strong>Échange</strong> — Vous nous expliquez votre activité, vos objectifs
+              et vos inspirations (sites que vous aimez, ambiance, couleurs).
+            </p>
+          </div>
+          <div class="step-item">
+            <div class="step-number">2</div>
+            <p class="step-body">
+              <strong>Proposition</strong> — Nous vous proposons une structure de pages
+              et une idée de design global.
+            </p>
+          </div>
+          <div class="step-item">
+            <div class="step-number">3</div>
+            <p class="step-body">
+              <strong>Maquette & développement</strong> — Nous construisons votre site,
+              section par section, en vous montrant l’avancement.
+            </p>
+          </div>
+          <div class="step-item">
+            <div class="step-number">4</div>
+            <p class="step-body">
+              <strong>Tests & mise en ligne</strong> — Nous vérifions l’affichage sur
+              mobile, tablette et ordinateur, puis nous mettons votre site en ligne.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -428,6 +508,9 @@
           <label for="project">Type de projet</label>
           <input id="project" type="text" placeholder="Ex : site restaurant, boutique, agence..." required>
 
+          <label for="phone">Numéro de téléphone</label>
+          <input id="phone" type="tel" placeholder="Ex : 06 12 34 56 78" required>
+
           <label for="budget">Budget estimé</label>
           <input id="budget" type="text" placeholder="Ex : entre 500€ et 1000€">
 
@@ -445,6 +528,11 @@
     © 2025 Imane Benazzouz & Yousra Hachmi — Tous droits réservés.
   </footer>
 
+  <!-- Bouton retour en haut -->
+  <button class="scroll-top" type="button" aria-label="Revenir en haut de la page">
+    ↑
+  </button>
+
   <!-- Remonter en haut à chaque rechargement -->
   <script>
     if ('scrollRestoration' in history) {
@@ -455,6 +543,22 @@
       setTimeout(() => {
         window.scrollTo(0, 0);
       }, 10);
+    });
+
+    // Bouton retour haut : affichage + scroll fluide
+    const scrollTopButton = document.querySelector('.scroll-top');
+
+    window.addEventListener('scroll', () => {
+      if (!scrollTopButton) return;
+      if (window.scrollY > 320) {
+        scrollTopButton.classList.add('is-visible');
+      } else {
+        scrollTopButton.classList.remove('is-visible');
+      }
+    });
+
+    scrollTopButton?.addEventListener('click', () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
 </body>
