--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
   <!-- SPLASH / LOGO -->
   <div class="splash">
     <!-- Vérifie que le fichier est bien dans le même dossier que index.html -->
-    <img src="logoIYdigitalstudio.png" alt="I&Y Digital Studio" class="splash-logo">
+    <img src="logoIYdigitalstudio.svg" alt="I&Y Digital Studio" class="splash-logo">
   </div>
 
   <!-- HERO / ACCUEIL -->
