--- a/index.html
+++ b/index.html
@@ -320,59 +320,22 @@
       display: grid;
       grid-template-columns: minmax(0, 1.6fr) minmax(0, 1.4fr);
       gap: 2.6rem;
-      align-items: stretch;
-      padding: 2.1rem 2rem 2.3rem;
-      border-radius: 26px;
-      border: 1px solid rgba(247, 232, 203, 0.24);
-      background:
-        radial-gradient(circle at top left, rgba(247, 232, 203, 0.08), transparent 55%),
-        radial-gradient(circle at bottom right, rgba(247, 232, 203, 0.06), transparent 60%),
-        #050505;
-      box-shadow: 0 28px 60px rgba(0, 0, 0, 0.9);
+      align-items: flex-start;
+      padding-top: 0.6rem;
     }
 
     .skills-block {
-      position: relative;
-      padding: 1.7rem 1.7rem 1.9rem;
-      border-radius: 20px;
-      background: rgba(7, 7, 7, 0.88);
-      border: 1px solid rgba(247, 232, 203, 0.18);
-      overflow: hidden;
-    }
-
-    .skills-block::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-      background: radial-gradient(circle at top left, rgba(247, 232, 203, 0.12), transparent 55%);
-      mix-blend-mode: soft-light;
-      opacity: 0.4;
+      padding: 0;
+      border: none;
+      background: transparent;
     }
 
     .skills-block-title {
-      position: relative;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.4rem;
-      padding: 0.35rem 0.9rem;
-      border-radius: 999px;
-      border: 1px solid rgba(247, 232, 203, 0.4);
-      background: rgba(5, 5, 5, 0.9);
-      font-size: 0.8rem;
-      letter-spacing: 0.2em;
+      font-size: 0.86rem;
+      letter-spacing: 0.18em;
       text-transform: uppercase;
-      color: rgba(247, 232, 203, 0.8);
-      margin-bottom: 1.1rem;
-    }
-
-    .skills-block-title::before {
-      content: "";
-      width: 7px;
-      height: 7px;
-      border-radius: 50%;
-      background: var(--text-beige);
-      box-shadow: 0 0 0 6px rgba(247, 232, 203, 0.15);
+      color: rgba(247, 232, 203, 0.7);
+      margin-bottom: 0.9rem;
     }
 
     .skills-list {
@@ -902,10 +865,10 @@
       <div>
         <h2 class="section-title">À propos de nous</h2>
         <p class="section-subtitle">
-          Deux développeuses web qui conçoivent des sites élégants, rapides et orientés résultats.
+          Deux développeuses web diplômées, qui créent des sites modernes, fiables et pensés pour vos clients.
         </p>
         <p class="section-content">
-          Nous sommes Imane Benazzouz et Yousra Hachmi, deux informaticiennes passionnées par le web et l’UX. Nous créons des sites vitrine, des petites boutiques en ligne (e‑commerce) et des interfaces sur mesure qui donnent une vraie image professionnelle à votre activité.
+          Nous sommes Imane Benazzouz et Yousra Hachmi, toutes les deux diplômées en informatique et spécialisées dans le développement web. Nous réalisons des sites vitrine, des boutiques en ligne (e‑commerce) et des projets plus poussés sur mesure, en fonction de vos besoins et de votre budget. Notre objectif : répondre à votre besoin de manière précise et rapide.
         </p>
       </div>
     </section>
@@ -925,21 +888,16 @@
             <div class="skills-block-title">Concrètement, ce que nous faisons pour vous</div>
             <ul class="skills-list">
               <li>
-                <span>Site vitrine ou e‑commerce efficace</span> — les pages essentielles
-                (accueil, présentation, services, réalisations, contact, boutique si besoin)
-                avec des boutons clairs pour appeler, réserver ou commander.
+                <span>Création de site vitrine</span> — nous vous créons des sites à l’image de votre marque,
+                avec les pages essentielles pour présenter votre activité et donner confiance.
               </li>
               <li>
-                <span>Design sur mesure</span> — couleurs, typographies, visuels et mise en page
-                en accord avec votre activité (restaurant, boutique, artisan, agence, indépendant…).
+                <span>Création de site e‑commerce</span> — boutique en ligne simple et claire,
+                à l’image de votre marque, pour mettre en avant vos produits et faciliter les commandes.
               </li>
               <li>
-                <span>Site pensé pour le mobile</span> — navigation simple sur téléphone,
-                texte lisible, boutons faciles à cliquer et informations importantes toujours visibles.
-              </li>
-              <li>
-                <span>Textes structurés et clairs</span> — nous vous aidons à organiser vos idées
-                (qui vous êtes, ce que vous proposez, pourquoi vous) pour que ce soit simple à lire.
+                <span>Création de site sur mesure</span> — site personnalisé, à l’image de votre marque,
+                adapté à votre activité et à vos besoins spécifiques (services, portfolio, réservation…).
               </li>
             </ul>
           </div>
