--- a/index.html
+++ b/index.html
@@ -398,19 +398,22 @@
       font-weight: 500;
     }
 
-    /* --- SECTION POURQUOI NOUS CHOISIR : VERSION PREMIUM --- */
+    /* --- SECTION POURQUOI NOUS CHOISIR : STYLE ALIGNÉ SUR COMPÉTENCES --- */
 
     .why-wrapper {
-      background: radial-gradient(circle at top left, #1a1a1a, #050505);
-      border-radius: 28px;
-      border: 1px solid rgba(247, 232, 203, 0.22);
-      padding: 2.2rem 2.1rem 2.5rem;
-      box-shadow: 0 26px 60px rgba(0, 0, 0, 0.8);
-      max-width: 960px;
+      max-width: 980px;
+      padding-top: 0.6rem;
+      padding-left: 0;
+      padding-right: 0;
+      padding-bottom: 0;
+      border: none;
+      border-radius: 0;
+      background: transparent;
+      box-shadow: none;
     }
 
     .why-header {
-      margin-bottom: 1.8rem;
+      margin-bottom: 1.6rem;
     }
 
     .why-kicker {
@@ -422,17 +425,18 @@
     }
 
     .why-title-inline {
-      font-size: 1.35rem;
+      font-size: 1.05rem;
       font-weight: 500;
-      max-width: 540px;
-      line-height: 1.6;
+      max-width: 620px;
+      line-height: 1.7;
+      color: rgba(247, 232, 203, 0.9);
     }
 
     .why-points {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 1.4rem 1.6rem;
-      margin-top: 0.5rem;
+      grid-template-columns: minmax(0, 1.4fr) minmax(0, 1.4fr);
+      gap: 1.4rem 2.4rem;
+      margin-top: 1.2rem;
     }
 
     .why-point {
@@ -443,11 +447,12 @@
     .why-dot {
       position: absolute;
       left: 0;
-      top: 0.3rem;
-      width: 8px;
-      height: 8px;
+      top: 0.55rem;
+      width: 6px;
+      height: 6px;
       border-radius: 50%;
-      border: 1px solid rgba(247, 232, 203, 0.9);
+      border: 1px solid rgba(247, 232, 203, 0.85);
+      background: #050505;
     }
 
     .why-point-title {
@@ -455,11 +460,12 @@
       text-transform: uppercase;
       letter-spacing: 0.14em;
       margin-bottom: 0.25rem;
+      color: rgba(247, 232, 203, 0.9);
     }
 
     .why-point-text {
       font-size: 0.93rem;
-      color: rgba(247, 232, 203, 0.9);
+      color: rgba(247, 232, 203, 0.88);
       line-height: 1.7;
     }
 
